kubernetes/apps/observability/blackbox-exporter/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blackbox-exporter
  namespace: observability
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https-main
  hostnames: ["blackbox-exporter.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - name: blackbox-exporter
          port: 9115
